// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Get user 1`] = `
Object {
  "app_metadata": Object {
    "provider": "email",
  },
  "aud": Any<String>,
  "confirmed_at": Any<String>,
  "created_at": Any<String>,
  "email": Any<String>,
  "id": Any<String>,
  "last_sign_in_at": Any<String>,
  "role": "",
  "updated_at": Any<String>,
  "user_metadata": Object {},
}
`;

exports[`Get user after updating 1`] = `
Object {
  "app_metadata": Object {
    "provider": "email",
  },
  "aud": Any<String>,
  "confirmed_at": Any<String>,
  "created_at": Any<String>,
  "email": Any<String>,
  "id": Any<String>,
  "last_sign_in_at": Any<String>,
  "role": "",
  "updated_at": Any<String>,
  "user_metadata": Object {
    "hello": "world",
  },
}
`;

exports[`Get user after updating email 1`] = `
Object {
  "app_metadata": Object {
    "provider": "email",
  },
  "aud": Any<String>,
  "confirmed_at": Any<String>,
  "created_at": Any<String>,
  "email": "client_ac_enabled_Lou23@hotmail.com",
  "email_change_sent_at": "2021-02-15T07:41:15.8564305Z",
  "id": Any<String>,
  "last_sign_in_at": Any<String>,
  "new_email": "updated_client_ac_enabled_Lou23@hotmail.com",
  "role": "",
  "updated_at": Any<String>,
  "user_metadata": Object {
    "hello": "world",
  },
}
`;

exports[`Get user after updating email twice 1`] = `
Object {
  "app_metadata": Object {
    "provider": "email",
  },
  "aud": Any<String>,
  "confirmed_at": Any<String>,
  "created_at": Any<String>,
  "email": "client_ac_enabled_Lou23@hotmail.com",
  "email_change_sent_at": "2021-02-15T07:41:15.8699128Z",
  "id": Any<String>,
  "last_sign_in_at": Any<String>,
  "new_email": "twice_client_ac_enabled_Lou23@hotmail.com",
  "role": "",
  "updated_at": Any<String>,
  "user_metadata": Object {
    "hello": "world",
  },
}
`;

exports[`Update user 1`] = `
Object {
  "app_metadata": Object {
    "provider": "email",
  },
  "aud": Any<String>,
  "confirmed_at": Any<String>,
  "created_at": Any<String>,
  "email": Any<String>,
  "id": Any<String>,
  "last_sign_in_at": Any<String>,
  "role": "",
  "updated_at": Any<String>,
  "user_metadata": Object {
    "hello": "world",
  },
}
`;

exports[`User changes email 1`] = `
Object {
  "app_metadata": Object {
    "provider": "email",
  },
  "aud": Any<String>,
  "confirmed_at": Any<String>,
  "created_at": Any<String>,
  "email": Any<String>,
  "email_change_sent_at": "2021-02-15T07:41:15.8564305Z",
  "id": Any<String>,
  "last_sign_in_at": Any<String>,
  "new_email": "updated_client_ac_enabled_Lou23@hotmail.com",
  "role": "",
  "updated_at": Any<String>,
  "user_metadata": Object {
    "hello": "world",
  },
}
`;

exports[`User changes email twice 1`] = `
Object {
  "app_metadata": Object {
    "provider": "email",
  },
  "aud": Any<String>,
  "confirmed_at": Any<String>,
  "created_at": Any<String>,
  "email": Any<String>,
  "email_change_sent_at": "2021-02-15T07:41:15.8699128Z",
  "id": Any<String>,
  "last_sign_in_at": Any<String>,
  "new_email": "twice_client_ac_enabled_Lou23@hotmail.com",
  "role": "",
  "updated_at": Any<String>,
  "user_metadata": Object {
    "hello": "world",
  },
}
`;

exports[`signIn() 1`] = `
Object {
  "access_token": Any<String>,
  "expires_in": Any<Number>,
  "refresh_token": Any<String>,
  "token_type": "bearer",
  "user": Object {
    "app_metadata": Object {
      "provider": "email",
    },
    "aud": Any<String>,
    "confirmed_at": Any<String>,
    "created_at": Any<String>,
    "email": Any<String>,
    "id": Any<String>,
    "last_sign_in_at": Any<String>,
    "role": "",
    "updated_at": Any<String>,
    "user_metadata": Object {},
  },
}
`;

exports[`signIn() 2`] = `
Object {
  "app_metadata": Object {
    "provider": "email",
  },
  "aud": Any<String>,
  "confirmed_at": Any<String>,
  "created_at": Any<String>,
  "email": Any<String>,
  "id": Any<String>,
  "last_sign_in_at": Any<String>,
  "role": "",
  "updated_at": Any<String>,
  "user_metadata": Object {},
}
`;

exports[`signIn() with the wrong password 1`] = `"No user found with that email, or password invalid."`;

exports[`signOut 1`] = `
Object {
  "error": null,
}
`;

exports[`signUp() 1`] = `
Object {
  "access_token": Any<String>,
  "expires_in": Any<Number>,
  "refresh_token": Any<String>,
  "token_type": "bearer",
  "user": Object {
    "app_metadata": Object {
      "provider": "email",
    },
    "aud": Any<String>,
    "confirmed_at": Any<String>,
    "created_at": Any<String>,
    "email": Any<String>,
    "id": Any<String>,
    "last_sign_in_at": Any<String>,
    "role": "",
    "updated_at": Any<String>,
    "user_metadata": null,
  },
}
`;

exports[`signUp() 2`] = `
Object {
  "app_metadata": Object {
    "provider": "email",
  },
  "aud": Any<String>,
  "confirmed_at": Any<String>,
  "created_at": Any<String>,
  "email": Any<String>,
  "id": Any<String>,
  "last_sign_in_at": Any<String>,
  "role": "",
  "updated_at": Any<String>,
  "user_metadata": null,
}
`;
